# accel-toolkit

./: .gitignore  CMakeLists.txt  accel-toolkit.sln  accelc-msvc.vcxproj  accelc-msvc.vcxproj.filters  main.c
Crypto/: Crypto.vcxproj
CryptoTest/: CryptoTest.vcxproj
Math/: Math.vcxproj  Math.vcxproj.filters  NTT.hpp  UIntAddition.hpp  UIntMultiplication.hpp  UIntPower.hpp  UIntSubtraction.hpp
Math/source/: AsmHelper.h  AsmHelper_x64.asm  DivisionIntrinsic_x64.asm  FastNumberTheoTransMT.cpp  FastNumberTheoTransST.cpp  KaratsubaMT.cpp  KaratsubaST.cpp  NumberTheoTrans.cpp  UIntAddition.cpp  UIntMultiplication.cpp  UIntSubtraction.cpp  UintPower.cpp
MathTest/: AsmHelper.cpp  MathTest.vcxproj  MathTest.vcxproj.filters  NTT.cpp  UIntAddition.cpp  UIntMultiplication.cpp  UIntPower.cpp  UIntSubtraction.cpp  _tmain.cpp
accel-c/: accel-c.vcxproj  accel-c.vcxproj.filters
accel-c/cryptolib/: AES128.h  AES192.h  AES256.h  Blowfish.h  DES.h  RC4.h  RC5-16.h  RC5-32.h  RC5-64.h  TEA.h  Twofish128.h  Twofish256.h
accel-c/cryptolib/source/: AES128.c  AES128_AESNI.c  AES192.c  AES192_AESNI.c  AES192_AESNI_AVX2.c  AES256.c  AES256_AESNI.c  AESConstant.c  Blowfish.c  DES.c  RC2.c  RC4.c  RC5-16.c  TEA.c  Twofish192.c  TwofishConstant.c  XTEA.c
accel-c/encoding/: base64.h
accel-c/encoding/source/: base64.c  base64_avx2.c  base64_ssse3.c
accel-c/hashlib/: MD2.h  MD4.h  MD5.h  SHA256.h  SHA384.h
accel-c/hashlib/source/: MD2.c  MD2_SSE2.c  MD4.c  MD4_SSE2.c  MD5.c  SHA1.c  SHA224.c  SHA256.c  SHA384.c  SHA512.c
accel-c/mathlib/: add.h  cmp.h  def.h  div.h  gcd.h  mul.h  powmod.h  sub.h
accel-c/mathlib/source/: add.c  cmp.c  div.c  div_asm.asm  gcd.c  mul.c  mul_Karatsuba.c  powmod.c  sub.c
accel-c/memorylib/: logical.h  memory.h
accel-c/memorylib/source/: logical.c
accel-cpp/: accel-cpp.vcxproj  accel-cpp.vcxproj.filters
accel-cpp/accelpp/crypto/: SymmetricCipher.hpp  def.hpp  (+1 more)
accel-test/: MiniStopwatch.hpp  _tmain.cpp  accel-test.vcxproj  accel-test.vcxproj.filters  test.hpp
accel-test/hash/: MD2Test.cpp  MD4Test.cpp  MD5Test.cpp  SHA1Test.cpp  SHA224Test.cpp  SHA256Test.cpp  SHA384Test.cpp  SHA512Test.cpp
accel-test/math/: mul_test.cpp  powmod_test.cpp
crypto/: CAST-128.h  RC2.h  RC4.h  RC5-64.h  Twofish192.h  XTEA.h  aes.h  blowfish.h  cast.h  des.h  rc2.h  rc4.h  rc5.h  tea.h  twofish.h
crypto/source/: CAST-128.c  RC5-32.c  RC5-64.c  Serpent.c  Twofish128.c  Twofish256.c  aes.c  aes_aesni.c  blowfish.c  cast128.c  des.c  rc2.c  rc4.c  rc5.c  tea.c  twofish.c  twofish_constant.c
encoding/: base16.h  base32.h  base64.h
encoding/source/: base16.c  base16_avx2.c  base16_ssse3.c  base32.c  base32_avx2.c  base32_ssse3.c  base64.c  base64_avx2.c  base64_ssse3.c
hash/: SHA1.h  SHA224.h  SHA512.h  md2.h  md4.h  md5.h  ripemd.h  sha1.h  sha2.h
hash/source/: MD2.c  MD4.c  MD4_SSE2.c  MD5.c  SHA384.c  SHA512.c  md2.c  md4.c  md5.c  ripemd160.c  sha1.c  sha224.c  sha256.c  sha384.c  sha512.c
math/: arithmetic.h  compare.h  def.h  def_asm.h  gcd.h  ntt.h  num_theory.h  powmod.h  random.h
math/ntt/: ntt.h
math/source/: add.c  add_sub.c  cmp.c  div.c  gcd.c  is_prime.c  mul.c  mul_Karatsuba.c  mul_fntt.c  ntt.c  powmod.c  random.c  sub.c
memory/: bitwise.h  reverse.h
memory/source/: bitwise.c  bitwise_avx2.c  bitwise_sse2.c  reverse.c  reverse_avx2.c  reverse_ssse3.c
(+27 files in other folders)
